# evo-notes

./: .env.example  .gitignore  .prettierrc  changes.patch  cursor_backend_requirements_and_benchma.md  index.html  lightweight-extract.md  openapi.yaml  orval.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  todo  tsconfig.json  vite.config.ts
.github/workflows/: openwiki-update.yml
_design_import/: SKILL.md  _ds_manifest.json  styles.css
_design_import/guidelines/: colors-neutrals.card.html  colors-notes.card.html  type-body.card.html  type-headings.card.html
_ds_analyze/: .thumbnail  _adherence.oxlintrc.json  _ds_bundle.js  readme.md
_ds_analyze/explorations/: card-distinction-v2.html  card-distinction.html
_ds_analyze/guidelines/: brand-logo.card.html  colors-primary.card.html  colors-semantic.card.html  spacing-radii.card.html  spacing-scale.card.html  spacing-shadows.card.html  type-weights.card.html
_ds_analyze/tokens/: base.css  colors.css  fonts.css  spacing.css  typography.css
cloudflare/mineru-relay/: README.md  wrangler.jsonc
deploy/: .env.example  b2-cors.example.json  docker-compose.e2e.yml  docker-compose.yml
deploy/postgres/: Dockerfile
e2e/: .env.example  global-setup.ts  global-teardown.ts  tsconfig.json
e2e/editor/: block-interactions.spec.ts  formatting.spec.ts  helpers.ts  insertions.spec.ts  playwright.editor.config.ts  suggestions.spec.ts
e2e/fixtures/: actors.ts  seed.sql  seed.ts
e2e/helpers/: api.ts  editor.ts  workspace.ts
e2e/perf/: editor.perf.ts  metrics.ts  playwright.perf.config.ts
e2e/sharing/: deck-sharing.spec.ts  material-modes.spec.ts  quiz-sharing.spec.ts  workspace-membership.spec.ts  workspace-sharing.spec.ts
messages/: en.json  zh.json
modal/: mineru_app.py  test_snapshot.py
old-pipeline/: .env.example  Dockerfile  README.md  pyproject.toml
old-pipeline/pipeline/: config.py  generate.py
old-pipeline/pipeline/bench/: __init__.py  harness.py  metrics.py
old-pipeline/pipeline/engines/: __init__.py  lightrag.py
old-pipeline/pipeline/ingest/: __init__.py  extract.py  indexer.py  lightrag_index.py  worker.py
old-pipeline/pipeline/llm/: client.py  embeddings.py
old-pipeline/pipeline/parsers/: annotate.py  base.py  docling.py
old-pipeline/pipeline/retrieve/: __init__.py  service.py
old-pipeline/pipeline/store/: __init__.py  corpus.py  db.py  memory.py  pg.py
old-pipeline/tests/: test_bench.py  test_concepts.py  test_embeddings.py  test_engines.py  test_lightrag.py  test_metrics.py  test_normalize.py  test_parsers.py  test_ppr.py  test_service.py
openwiki/: .last-update.json  INSTRUCTIONS.md  index.md  quickstart.md
openwiki/architecture/: data-model.md  index.md  overview.md
openwiki/backend/: api-and-auth.md  api-and-store.md  index.md
openwiki/frontend/: editor-and-ui.md  index.md  plate-editor.md
openwiki/operations/: deployment.md  index.md
openwiki/pipeline/: index.md  rag-pipeline.md
openwiki/testing/: e2e-and-unit.md  e2e.md  index.md
pipeline/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
pipeline/pipeline/: __init__.py  config.py
pipeline/pipeline/bench/: cli.py  harness.py  report.py
pipeline/pipeline/bench/datasets/: multihop.json  sample.json
pipeline/pipeline/engines/: base.py  lightrag.py  linearrag.py  ppr.py
pipeline/pipeline/ingest/: concepts.py  normalize.py  worker.py
pipeline/pipeline/llm/: __init__.py  client.py  embeddings.py
pipeline/pipeline/parsers/: __init__.py  mineru.py  simple.py
pipeline/pipeline/rag/: __init__.py  cache.py  clone.py  factory.py  mineru_client.py  mineru_lite.py  modal_parser.py  models.py  progress.py
pipeline/pipeline/retrieve/: ai_adapter.py  service.py
pipeline/pipeline/store/: blobstore.py  corpus.py  db.py  memory.py  pg.py
pipeline/tests/: README.md  conftest.py  test_ai_adapter.py  test_bench.py  test_embeddings.py  test_generate.py  test_helpers.py  test_indexer.py  test_ingest_query.py  test_memory_corpus.py  test_mineru_lite.py  test_modal_parser.py
pipeline/tests/cassettes/: test_generate_flashcards_json.yaml  test_ingest_pdf_via_modal_and_query.yaml  test_ingest_text_and_query.yaml
pipeline/tests/fixtures/: sample.txt
project.inlang/: settings.json
public/: mockServiceWorker.js
server/: .air.toml  .env.example  Dockerfile  README.md  go.mod  go.sum
server/migrations/: embed.go  (+22 more)
src/: main.tsx  router.tsx
(+363 files in other folders)
