[project]
name = "evo-pipeline"
version = "0.1.0"
description = "Evo Notes parser + RAG pipeline (pluggable MinerU/Docling x LightRAG/LinearRAG)"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.1",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2",
  "numpy>=1.26",
]

[project.optional-dependencies]
# Heavy/optional backends — install the pair you want to run.
docling = ["docling>=2.0"]
mineru = ["mineru>=2.0"]
pdf = ["pypdf>=4.0"]
embed = ["sentence-transformers>=2.7"]
nlp = ["spacy>=3.7", "keybert>=0.8"]
llm = ["anthropic>=0.39"]
# Role-based providers: OpenAI-compatible (OpenRouter, DeepSeek) + Gemini, and
# the OpenAI-compatible /embeddings client used by EVO_EMBEDDER=remote.
providers = ["openai>=1.0", "google-genai>=0.3"]
rag = ["scipy>=1.11", "scikit-learn>=1.4"]
test = ["pytest>=8.0"]

[project.scripts]
evo-worker = "pipeline.ingest.worker:main"
evo-bench = "pipeline.bench.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.setuptools.package-data]
"pipeline.bench.datasets" = ["*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
