[project]
name = "evo-pipeline"
version = "0.2.0"
description = "Evo Notes ingest + retrieval pipeline (RAG-Anything + official LightRAG)"
requires-python = ">=3.10"
dependencies = [
  # RAG-Anything orchestration + official LightRAG with Postgres/AGE/pgvector.
  "raganything>=1.0",
  "lightrag-hku>=1.4",
  "asyncpg>=0.29",           # LightRAG PG storages (KV/vector/graph/doc-status)
  # Job queue + notifications over the shared Postgres.
  "psycopg[binary]>=3.1",
  # Model providers (OpenAI-compatible: OpenRouter / DeepSeek / Gemini).
  "openai>=1.30",
  "numpy>=1.26",
  # Modal parse client + Redis progress + retrieval API.
  "requests>=2.31",
  "redis>=5.0",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
evo-worker = "pipeline.ingest.worker:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
